fix: Layout on tablet.

--- a/src/components/organisms/leaflet/_index.scss
+++ b/src/components/organisms/leaflet/_index.scss
@@ -16,8 +16,8 @@
     padding-bottom: 138px;
     padding-top: 108px;
 
-    @media only screen and (max-width: 768px) {
-        padding-top: 100px;
+    @media only screen and (max-width: 1000px) {
+        padding-top: 120px;
         margin: 32px auto;
     }
 }
